# nipoppy

./: .all-contributorsrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  DATALAD_TUTORIAL.md  LICENSE  Makefile  README.md  REFACTORING_SUMMARY.md  codecov.yml  known_issues.md  mr_proc.py  nipoppy.py  pyproject.toml  sample_global_configs.json  setup.cfg  setup.py  tree.json  utils.py
nipoppy_cli/: README.md  pyproject.toml
nipoppy_cli/docs/: Makefile  requirements.txt
nipoppy_cli/docs/scripts/: pydantic_to_jsonschema.py
nipoppy_cli/docs/source/: README.md  conf.py  contributing.md  glossary.md  index.md  installation.md  personas.md  quickstart.md
nipoppy_cli/docs/source/_static/: theme.css
nipoppy_cli/docs/source/cli_reference/: bidsify.md  convert.md  doughnut.md  reorg.md
nipoppy_cli/docs/source/schemas/: index.rst  schema_howto.md
nipoppy_cli/docs/source/user_guide/: bids_conversion.md  extraction.md  global_config.md  index.md  organization.md  organization_imaging.md  organizing_imaging.md  populating.md  processing.md  tracking.md
nipoppy_cli/docs/source/user_guide/inserts/: apptainer_stub.md  custom_dicom_reorg.py  default_dicom_reorg-after.txt  default_dicom_reorg-before.txt  example_descriptor.json
nipoppy_cli/nipoppy/: __init__.py  base.py  env.py  layout.py  logger.py  utils.py
nipoppy_cli/nipoppy/cli/: __init__.py  parser.py  run.py
nipoppy_cli/nipoppy/config/: __init__.py  base.py  boutiques.py  container.py  main.py  pipeline.py  pipeline_step.py  singularity.py  tracker.py
nipoppy_cli/nipoppy/data/descriptors/: RABIES-0.5.1-analysis.json  RABIES-0.5.1-confound-correction.json  bidscoin-4.3.2-convert.json  bidscoin-4.3.2-edit.json  bidscoin-4.3.2-prepare.json  bidscoiner-4.3.2.json  bidseditor-4.3.2.json  bidsmapper-4.3.2.json  dcm2bids-3.1.0-convert.json  dcm2bids-3.1.0-prepare.json  dicm2nii-2023.03.16.json  fmriprep-20.2.7.json  fmriprep-23.1.3.json  heudiconv-0.12.2-convert.json  heudiconv-0.12.2-prepare.json  heudiconv-0.12.2.json  mriqc-23.1.0.json  nii2mnc-1.9.18.json  qsiprep-0.21.4.json
nipoppy_cli/nipoppy/data/examples/: sample_dicom_dir_map.csv  sample_global_config-all_pipelines.json  sample_global_config-latest_pipelines.json  sample_global_configs-all_pipelines.json  sample_global_configs.json  sample_manifest.csv
nipoppy_cli/nipoppy/data/examples/sample_invocations/: RABIES-0.5.1-analysis.json  RABIES-0.5.1-confound-correction.json  RABIES-0.5.1-preprocess.json  dcm2bids-3.1.0-convert.json  dcm2bids-3.1.0-prepare.json  dicm2nii-2024.02.06.json  fmriprep-20.2.7.json  fmriprep-23.1.3.json  heudiconv-0.12.2-convert.json  heudiconv-0.12.2-prepare.json  mriqc-23.1.0.json
nipoppy_cli/nipoppy/data/examples/sample_tracker_configs/: fmriprep-20.2.7.json  fmriprep-23.1.3.json  freesurfer-6.0.1.json  mriqc-23.1.0.json  (+1 more)
nipoppy_cli/nipoppy/data/layout/: layout-0.1.0.json
nipoppy_cli/nipoppy/data/layouts/: layout-0.1.0.json  layout-default.json
nipoppy_cli/nipoppy/data/sample_data/: sample_global_configs.json
nipoppy_cli/nipoppy/tabular/: __init__.py  bagel.py  base.py  dicom_dir_map.py  doughnut.py  manifest.py
nipoppy_cli/nipoppy/workflows/: base.py  bids_conversion.py  dataset_init.py  dicom_reorg.py  doughnut.py  minc_conversion.py  pipeline.py  runner.py  tracker.py
nipoppy_cli/nipoppy_new/docs/scripts/: pydantic_to_jsonschema.py
nipoppy_cli/nipoppy_new/docs/source/: quickstart.md
nipoppy_cli/tests/: conftest.py  test_base.py  test_cli.py  test_config_boutiques.py  test_config_container.py  test_config_main.py  test_config_pipeline.py  test_config_pipeline_step.py  test_default_config.py  test_env.py  test_layout.py  test_logger.py  test_parser.py  test_supported_pipelines.py  test_tabular_bagel.py  test_tabular_dicom_dir_map.py  test_tabular_doughnut.py  test_tabular_manifest.py  test_utils.py  test_workflow_base.py  test_workflow_bids_conversion.py  test_workflow_dicom_reorg.py  test_workflow_doughnut.py  test_workflow_init.py  test_workflow_pipeline.py  test_workflow_runner.py  test_workflow_tracker.py
nipoppy_cli/tests/data/: config1.json  config2.json  config3.json  config_invalid1.json  config_invalid2.json  dicom-derived.dcm  dicom-not_derived.dcm  dicom_dir_map1.csv  dicom_dir_map2.csv  dicom_dir_map_invalid1.csv  dicom_dir_map_invalid2.csv  dicom_dir_map_invalid3.csv  dicom_dir_map_invalid4.csv  doughnut1.csv  doughnut2.csv  doughnut_invalid2.csv  layout1.json  layout2.json  layout_invalid1.json  layout_invalid2.json  manifest1.csv  manifest2.csv  manifest_invalid1.csv  manifest_invalid3.csv  manifest_invalid4.csv
nipoppy_new/: README.md  pyproject.toml
nipoppy_new/docs/source/: conf.py  contributing.md  developer.md  glossary.md  index.md  installation.md  quickstart.md
nipoppy_new/docs/source/cli_reference/: convert.md  doughnut.md  index.md  init.md  reorg.md  run.md  track.md
nipoppy_new/docs/source/schemas/: index.rst
nipoppy_new/nipoppy/: layout.py  logger.py  utils.py
nipoppy_new/nipoppy/cli/: parser.py  run.py
nipoppy_new/nipoppy/data/descriptors/: dcm2bids-3.1.0-convert.json  dcm2bids-3.1.0-prepare.json  fmriprep-20.2.7.json  fmriprep-23.1.3.json  heudiconv-0.12.2-prepare.json  mriqc-23.1.0.json
nipoppy_new/nipoppy/data/layout/: layout-default.json
nipoppy_new/nipoppy/tabular/: base.py  doughnut.py  manifest.py
nipoppy_new/nipoppy/workflows/: base.py  dataset_init.py  dicom_reorg.py  doughnut.py  pipeline.py  runner.py  tracker.py
nipoppy_new/tests/: conftest.py  test_cli.py  test_config_base.py  test_layout.py  test_logger.py  test_supported_pipelines.py  test_tabular_bagel.py  test_tabular_base.py  test_tabular_doughnut.py  test_tabular_manifest.py  test_utils.py  test_workflow_base.py  test_workflow_bids_conversion.py  test_workflow_dicom_reorg.py  test_workflow_doughnut.py  test_workflow_init.py  test_workflow_pipeline.py  test_workflow_runner.py
nipoppy_new/tests/data/: config_invalid1.json  doughnut2.csv  doughnut_invalid1.csv  manifest1.csv  manifest2.csv  manifest3.csv  manifest4-invalid.csv
(+1098 files in other folders)
