[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
    { name = "Michelle Wang" },
    { name = "Nikhil Bhagwat" },
    { name = "Brent McPherson" },
    { name = "Rémi Gau" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "boutiques",
    "pandas",
    "pybids",
    "pydantic",
    "rich",
    "rich_argparse",
]
description = "Standardized organization and processing of neuroimaging-clinical datasets"
license = { file = "LICENSE" }
name = "nipoppy"
readme = "../README.md"
# TODO requires_python
version = "1.0.0" # TODO eventually use dynamic versioning

[project.optional-dependencies]
dev = ["nipoppy[doc]", "nipoppy[test]", "pre-commit"]
doc = [
    "furo>=2024.1.29",
    "pygments-csv-lexer>=0.1.3",
    "sphinx>=7.2.6",
    "sphinx-argparse>=0.4.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-jsonschema>=1.19.1",
    "sphinx-togglebutton>=0.3.2",
    "mdit-py-plugins>=0.4.0",
    "myst-parser>=2.0.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov",
    "pytest-mock",
    "fids>=0.1.0",
]
tests = ["nipoppy[test]"] # alias in case of typo

[project.scripts]
nipoppy = "nipoppy.cli.run:cli"

[tool.hatch.build.targets.wheel]
packages = ["nipoppy"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.codespell]
skip = '.git,.github,pyproject.toml'

[tool.pytest.ini_options]
addopts = "-ra -q -vv "
testpaths = ["tests/"]
minversion = "6.0"
xfail_strict = true
